force-app/main/default/objects/Rollup_Config__mdt/fields/Aggregate_Function__c.field-meta.xml
<CustomField>
    <fullName>Aggregate_Function__c</fullName>
    <label>Aggregate Function</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SUM</fullName>
                <default>true</default>
                <label>SUM</label>
            </value>
            <value>
                <fullName>AVG</fullName>
            </value>
            <value>
                <fullName>MIN</fullName>
            </value>
            <value>
                <fullName>MAX</fullName>
            </value>
            <value>
                <fullName>COUNT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>