force-app/main/default/objects/Rollup_Config__mdt/fields/Child_Field__c.field-meta.xml
<CustomField>
    <fullName>Child_Field__c</fullName>
    <label>Child Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>